# aid2olc-workflows

./: AGENTS.md  README.md
.claude/: settings.json
.github/: pull_request_template.md
.github/workflows/: codebuild.yml  release-pr.yml  release.yml
aidlc-rules/aws-aidlc-rule-details/operations/: incident.md  observability.md  operations.md  ops-gates.md  post-session-learning.md  production-readiness.md  provision-change.md  security-cost-review.md  severity-matrix.md  triage.md
aidlc-rules/aws-aidlc-rules/: core-workflow.md
docs/: ADMINISTRATIVE_GUIDE.md  DEVELOPERS_GUIDE.md  WORKING-WITH-AIDLC.md
scripts/: install.ps1  install.sh
scripts/aidlc-designreview/tool-install/: install-linux.sh
scripts/aidlc-evaluator/: pyproject.toml
